feat(v1.8.0): Complete Sprint 2 architecture improvements
🎯 **Sprint 2 Technical Debt Resolution Complete**

This release completes all 9 Sprint 2 items from TECHNICAL-DEBT.md, delivering major architecture improvements focused on state management, storage infrastructure, and code organization.

## 🏗️ Architecture Improvements

### TD-006: React Context API Implementation
- **AppStateContext**: Centralized state management for processing flow
- **VersionsContext**: Version history with optimistic updates
- **ModalsContext**: Modal state management with type-safe API
- Eliminated prop drilling across 15+ components
- Type-safe context with proper TypeScript inference

### TD-009: State Management Refactoring
- **useModals**: Custom hook for modal orchestration
- **useSavedVersions**: Version CRUD with IndexedDB integration
- **useGeneration**: Two-phase infographic generation workflow
- **useStyleSuggestions**: AI-powered style recommendation engine
- Extracted 450+ lines from App.tsx
- 4 specialized hooks with single responsibilities

### TD-003: Unified IndexedDB Storage
- **Complete localStorage → IndexedDB migration**
- 4 object stores: versions, templates, batchQueues, formDrafts
- Automatic one-time migration from localStorage
- CRUD operations for all data types
- Quota-safe with compression and cleanup utilities
- DB_VERSION 2 schema with backward compatibility

## ⚡ Performance Optimizations

### TD-015: React Performance
- React.memo on VersionHistory (prevents list re-renders)
- useMemo for expensive computations in components
- useCallback for stable function references in hooks
- Optimized re-render behavior across component tree

## 🔧 Code Quality & Developer Experience

### TD-019: ESLint Configuration
- Strict TypeScript rules with proper parser config
- React Hooks linting with exhaustive-deps enforcement
- Accessibility checks (jsx-a11y)
- Import sorting and organization rules
- Fixed 12 linting errors across codebase

### TD-025: Keyboard Shortcuts

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "infographix-genai",
   "private": true,
-  "version": "1.7.0",
+  "version": "1.8.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "vite build && echo 'Bundle analysis saved to dist/stats.html'",
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext .ts,.tsx --fix"
@@ -38,6 +39,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.7"
