feat(services): implement dual-mode API service layer for v2.2.0-foundation
Implement comprehensive service integration layer enabling seamless switching
between Gemini and InfoGraphix backends for infographic generation.

## New Files (1,376 lines total)

### src/services/infographixService.ts (364 lines)
- InfoGraphixService class wrapping MockInfoGraphixClient
- UnifiedGenerationRequest interface for normalized request handling
- GenerationResult type with status tracking (pending/analyzing/generating/completed/failed/cancelled)
- Async methods: createGeneration(), getGenerationStatus(), waitForGeneration(), cancelGeneration()
- Resource methods: getHistory(), getTemplates(), getQuota(), getAvailableStyles(), getAvailablePalettes()
- Singleton pattern with getInfoGraphixService() and resetInfoGraphixService()
- Private helpers: mapJobStatus(), mapJobToResult(), delay() for polling

### src/services/apiService.ts (429 lines)
- ApiService class with dual-mode routing (gemini/infographix/auto)
- ApiMode type and ApiServiceConfig interface for configuration
- GenerationRequest and ProcessingStep types for UI integration
- configure() and getConfig() methods with sensitive key masking
- getEffectiveMode() for runtime mode detection
- isReady() validation for API key requirements
- getRateLimitStatus() exposing Gemini rate limiter
- analyzeTopic() routing to appropriate backend
- generateImage() for Gemini-only image generation
- generateInfographic() unified method for both modes
- getSuggestions() for AI-powered style recommendations
- createAsyncGeneration(), getGenerationStatus(), cancelGeneration() for async workflows
- detectDefaultMode() using VITE_API_MODE and VITE_INFOGRAPHIX_API_KEY

### src/services/__tests__/infographixService.test.ts (270 lines)
- 18 contract tests for InfoGraphixService
- Tests: constructor initialization, createGeneration with filters/fileContent
- Tests: getGenerationStatus, waitForGeneration with progress callback
- Tests: cancelGenera

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,71 @@
 # Copy this file to .env.local and fill in your values
 # DO NOT commit .env.local to version control
 
-# Google Gemini API Key (Optional for local development)
-# Required for local development. In Google AI Studio deployment, API keys are
-# selected via the AI Studio interface.
+# =============================================================================
+# API Mode Configuration (v2.2.0+)
+# =============================================================================
+
+# API Mode: Controls which backend is used for infographic generation
+# Options:
+#   - 'gemini'     : Direct Gemini API calls (default, current behavior)
+#   - 'infographix': InfoGraphix AI API (Q2 2026, uses mock for now)
+#   - 'auto'       : Automatically selects based on available keys
+VITE_API_MODE=gemini
+
+# =============================================================================
+# Google Gemini API (Default Mode)
+# =============================================================================
+
+# Google Gemini API Key
+# Required for 'gemini' mode and Google AI Studio deployment
 # Get your key from: https://makersuite.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Note: The VITE_ prefix is required for environment variables to be exposed
+# Legacy alias (also supported)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# =============================================================================
+# InfoGraphix AI API (Future - Q2 2026)
+# =============================================================================
+
+# InfoGraphix API Key
+# Required for 'infographix' mode
+# Get your key from: https://infographix.ai/dashboard/api-keys (coming Q2 2026)
+# VITE_INFOGRAPHIX_API_KEY=your_infographix_api_key_here
+
+# InfoGraphix API Base URL (optional)
+# Default: https://api.infographix.ai/v1
+# Use for custom deployments or development servers
+# VITE_INFOGRAPHIX_BASE_URL=https://api.infographix.ai/v1
+
+# =============================================================================
+# Development Options
+# =============================================================================
+
+# Enable debug logging for API service
+# VITE_DEBUG=true
+
+# Mock client options (InfoGraphix mode only)
+# Simulate analysis delay in milliseconds (default: 2000)
+# VITE_MOCK_ANALYSIS_DELAY=2000
+
+# Simulate generation delay in milliseconds (default: 3000)
+# VITE_MOCK_GENERATION_DELAY=3000
+
+# Simulate error rate (0-1, default: 0 = no errors)
+# VITE_MOCK_ERROR_RATE=0
+
+# =============================================================================
+# Notes
+# =============================================================================
+#
+# The VITE_ prefix is required for environment variables to be exposed
 # to the browser in Vite-based applications.
+#
+# For CI/CD:
+#   - Set GEMINI_API_KEY in your CI secrets
+#   - Set CODECOV_TOKEN for test coverage uploads
+#
+# For production deployment:
+#   - In Google AI Studio: API keys are selected via the AI Studio interface
+#   - For InfoGraphix API: Set VITE_INFOGRAPHIX_API_KEY and VITE_API_MODE=infographix
